edited the colors for the light and dark modes, when players clicks the play agin button the mode is reset to light as all it does is refresh page, needs fixing

--- a/src/index.scss
+++ b/src/index.scss
@@ -60,22 +60,52 @@ h1 {
 
 /* ------ Wordle ------*/
 .light {
-    background-color: #8BC6EC;
-    background: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
-    height: 100svh;
-    width: 100%;
-}
-.dark {
-    max-width: 1500px;
-    background: #141E30;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #457fca;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #5691c8, #457fca);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #5691c8, #457fca); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     height: 100svh;
     width: 100%;
     .keyboard {
-        background: #141E30;
-        background: -webkit-linear-gradient(to right, #243B55, #141E30);
-        background: linear-gradient(to right, #243B55, #141E30);
+        button {
+            // background:#0093E9;
+            box-shadow: 4px 4px 8px #474343, -4px -4px 8px #fff;
+        }
+        button:active {
+            box-shadow: 1px 1px 2px #fff8f8, -1px -1px 2px #474343;
+        }
+    }
+    .modal {
+        div {
+            background: #0093E9;
+            background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+        }
+    }
+}
+.dark {
+    max-width: 1500px;
+    background: black;
+    height: 100svh;
+    width: 100%;
+    .keyboard {
+        background: black;
+        box-shadow: 4px 4px 8px #474343, -4px -4px 8px #858383;
+        button {
+            color: #fff;
+            background: black;
+            box-shadow: 4px 4px 8px #474343, -4px -4px 8px #fff;
+            
+        }
+        button:active {
+            box-shadow: 1px 1px 2px #fff, -1px -1px 2px #474343;
+        }
+    }
+    .modal {
+        background: rgba(255, 255, 255, 0.3);
+        div {
+            background-color: black;
+            color: white;
+            // background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+        }
     }
 }
 .btnGroup {
@@ -222,7 +252,6 @@ h1 {
     max-width: fit-content;
     margin: 1em auto;
     padding: .3em .7em;
-    background: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
     border-radius: 10px;
     box-shadow: 4px 4px 8px #474343, -4px -4px 8px #fff;
 
@@ -234,8 +263,6 @@ h1 {
             margin: .2em;
             padding: .7em 1em;
             border: none;
-            background: #fff;
-            box-shadow: 4px 4px 8px #474343, -4px -4px 8px #fff;
             outline: none;
             border-radius: 5px;
 
@@ -259,8 +286,6 @@ h1 {
 
             &.submit {
                 width: 10em;
-                background: #474343;
-                color: white;
                 font-weight: bold;
                 letter-spacing: 1px;
                 box-shadow: 4px 4px 8px #474343, -4px -4px 8px #fff;
@@ -287,12 +312,10 @@ h1 {
     left: 0;
     background: rgba(0, 0, 0, .3);
     line-height: 1.5;
+    text-align: center;
 
     div {
         margin: 30% auto;
-        background-color: #0093E9;
-        background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
-
         width: 50%;
         min-width: fit-content;
         padding: 1em;
@@ -316,10 +339,6 @@ h1 {
             background: #1f43e0;
             color: #fff;
             border: 1px solid #444cf7;
-        }
-
-        button:hover {
-            box-shadow: 1px 1px 2px #fff8f8, -1px -1px 2px #474343;
         }
     }
 }
